# Labordaten

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md
apps/backend/: alembic.ini  pyproject.toml
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 20260420_0001_initial_core_schema.py  20260420_0002_zielbereiche.py  20260420_0003_planung.py  20260420_0004_import_pruefpunkte.py  20260421_0005_gruppen.py  20260421_0006_parameter_aliase.py  20260421_0007_einheiten.py  20260421_0008_reference_operators.py  (+13 more)
apps/backend/scripts/: export_initialdaten_snapshot.py  import_initialdaten_snapshot.py
apps/backend/tests/: conftest.py  test_api_contract_fixed_codes.py  test_code_field_validation.py  test_delete_logic_api.py  test_documents_api.py  test_gruppen_api.py  test_import_document_linking.py  test_import_group_suggestions.py  test_import_parameter_normalization_warning.py  test_import_person_override.py  test_import_prompt.py  test_initialdaten.py  test_installationsoptionen.py  test_masterdata_editing_api.py  test_measurement_common.py  test_parameter_alias_import_mapping.py  test_parameter_alias_suggestions.py  test_parameter_conversion_rules.py  test_parameter_duplicate_merge.py  test_parameter_key_generation.py  test_parameter_rename.py  test_parameter_standard_unit.py  test_planung_batch_api.py  test_planung_faelligkeiten.py  test_reference_boundary_operators.py  test_report_display_units.py  test_report_pdf_layout.py  test_report_sorting.py  test_units.py  test_vorlagen_api.py  test_wissensbasis_api.py  test_zielwertpakete_api.py
(+693 files in other folders)
