[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labordaten-backend"
version = "0.2.0"
description = "Lokales Backend für die Laboranwendung Labordaten"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.111,<1",
  "openpyxl>=3.1,<4",
  "pydantic-settings>=2.2,<3",
  "python-multipart>=0.0.9,<1",
  "reportlab>=4.2,<5",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pyinstaller>=6.0,<7",
  "pytest>=8.2,<9"
]

[project.scripts]
labordaten = "labordaten_backend.launcher:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"labordaten_backend.modules.initialdaten" = ["*.json"]
"labordaten_backend.modules.zielwertpakete" = ["*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
